fixed page_productOverview keyboard covered by payment buttons

--- a/ui/references/templates/default_AP2/page_product_overview.css
+++ b/ui/references/templates/default_AP2/page_product_overview.css
@@ -210,7 +210,7 @@ QLabel {
     line-height: 40px;
     color: #FFF7ED;
     border-radius: 20px;
-    background-color: #BC8439;
+    /* background-color: #BC8439; */
     qproperty-alignment: AlignCenter;
 }
 #label_selected_volume{
